@@ -26,7 +26,7 @@ Fullscreen
 Windowed
 .TP
 \fB\-p, \-\-start\-position POSITION\fR
-Begin at some position in the log (between 0.0 and 1.0).
+Begin at some position in the log (between 0.0 and 1.0 or 'random').
 .TP
 \fB    \-\-stop\-position  POSITION\fR
 Stop (exit) at some position in the log (does not work with STDIN).
