@@ -4,8 +4,9 @@
  * Added --logo and --background-image options.
  * Added --dont-stop and --stop-at-time options.
  * Added --log-command option to use instead of multiple --log-command-VCS options.
- * Allow --file-idle-time 0 (files will never expire).
  * Added --hide mouse option.
+ * Allow --file-idle-time 0 (files will never expire).
+ * Allow -start-position random to set a random start position.
  * Replaced --disable-progress and --disable-bloom with arguments to --hide.
 
 0.26:
